// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DonutChart /> render when data passed in renders the correct amount of bars 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 12px;
  min-width: 12px;
  max-width: 12px;
  height: 12px;
  min-height: 12px;
  max-height: 12px;
  margin-right: 8px;
  background: #56C58C;
}

.c6 {
  width: 12px;
  min-width: 12px;
  max-width: 12px;
  height: 12px;
  min-height: 12px;
  max-height: 12px;
  margin-right: 8px;
  background: #F0CD53;
}

.c7 {
  width: 12px;
  min-width: 12px;
  max-width: 12px;
  height: 12px;
  min-height: 12px;
  max-height: 12px;
  margin-right: 8px;
  background: #3AB5F0;
}

.c5 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: left;
  width: 100%;
  cursor: default;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 136px;
  min-width: 136px;
  height: 136px;
}

.c2 {
  padding: 0;
  margin: 0 0 0 16px;
  overflow-y: auto;
  height: 150px;
}

<div
  className="c0"
>
  <svg
    className="c1"
    data={
      Array [
        Object {
          "group": false,
          "name": "Entire home/apt",
          "value": 14900727,
        },
        Object {
          "group": false,
          "name": "Private room",
          "value": 11432784,
        },
        Object {
          "group": false,
          "name": "Shared room",
          "value": 82000000,
        },
      ]
    }
    size={136}
  />
  <ul
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <p
        className="c5"
      >
        Entire home/apt
      </p>
    </div>
    <div
      className="c3"
    >
      <div
        className="c6"
      />
      <p
        className="c5"
      >
        Private room
      </p>
    </div>
    <div
      className="c3"
    >
      <div
        className="c7"
      />
      <p
        className="c5"
      >
        Shared room
      </p>
    </div>
  </ul>
</div>
`;

exports[`<DonutChart /> render when data passed in renders without legend 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 136px;
  min-width: 136px;
  height: 136px;
}

<div
  className="c0"
>
  <svg
    className="c1"
    data={
      Array [
        Object {
          "group": false,
          "name": "Entire home/apt",
          "value": 14900727,
        },
        Object {
          "group": false,
          "name": "Private room",
          "value": 11432784,
        },
        Object {
          "group": false,
          "name": "Shared room",
          "value": 82000000,
        },
      ]
    }
    size={136}
  />
</div>
`;

exports[`<DonutChart /> update when data changes should call the update method or the chart 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 12px;
  min-width: 12px;
  max-width: 12px;
  height: 12px;
  min-height: 12px;
  max-height: 12px;
  margin-right: 8px;
  background: #56C58C;
}

.c6 {
  width: 12px;
  min-width: 12px;
  max-width: 12px;
  height: 12px;
  min-height: 12px;
  max-height: 12px;
  margin-right: 8px;
  background: #F0CD53;
}

.c7 {
  width: 12px;
  min-width: 12px;
  max-width: 12px;
  height: 12px;
  min-height: 12px;
  max-height: 12px;
  margin-right: 8px;
  background: #3AB5F0;
}

.c5 {
  color: #2C2C2C;
  margin: 0;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-align: left;
  width: 100%;
  cursor: default;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 136px;
  min-width: 136px;
  height: 136px;
}

.c2 {
  padding: 0;
  margin: 0 0 0 16px;
  overflow-y: auto;
  height: 150px;
}

<div
  className="c0"
>
  <svg
    className="c1"
    data={
      Array [
        Object {
          "group": false,
          "name": "Entire home/apt",
          "value": 14900727,
        },
        Object {
          "group": false,
          "name": "Private room",
          "value": 11432784,
        },
        Object {
          "group": false,
          "name": "Shared room",
          "value": 82000000,
        },
      ]
    }
    size={136}
  />
  <ul
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <p
        className="c5"
      >
        Entire home/apt
      </p>
    </div>
    <div
      className="c3"
    >
      <div
        className="c6"
      />
      <p
        className="c5"
      >
        Private room
      </p>
    </div>
    <div
      className="c3"
    >
      <div
        className="c7"
      />
      <p
        className="c5"
      >
        Shared room
      </p>
    </div>
  </ul>
</div>
`;

exports[`<DonutChart /> update when data changes should call the update method or the chart 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  width: 136px;
  min-width: 136px;
  height: 136px;
}

.c2 {
  padding: 0;
  margin: 0 0 0 16px;
  overflow-y: auto;
  height: 150px;
}

<div
  className="c0"
>
  <svg
    className="c1"
    data={Array []}
    size={136}
  />
  <ul
    className="c2"
  />
</div>
`;
